--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,9 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="avatar"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="715dp" />
+        app:constraint_referenced_ids="avatar" />
 
     <TextView
         android:id="@+id/middle_text"
@@ -79,9 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="middle_text"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="715dp" />
+        app:constraint_referenced_ids="middle_text" />
 
     <ImageView
         android:id="@+id/ic_liked"
