--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         tools:srcCompat="@sample/posts_avatars" />
 
     <TextView
-        android:id="@+id/top_text_1"
+        android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -27,20 +27,20 @@
         android:textColor="@color/purple_700"
         android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/top_text_2"
+        app:layout_constraintBottom_toTopOf="@+id/published"
         app:layout_constraintStart_toEndOf="@+id/avatar"
         app:layout_constraintTop_toTopOf="@+id/avatar"
         tools:text="@sample/posts.json/data/author" />
 
     <TextView
-        android:id="@+id/top_text_2"
+        android:id="@+id/published"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/avatar"
         app:layout_constraintStart_toEndOf="@+id/avatar"
-        app:layout_constraintTop_toBottomOf="@+id/top_text_1"
+        app:layout_constraintTop_toBottomOf="@+id/author"
         tools:text="@sample/posts.json/data/published" />
 
     <ImageView
@@ -60,7 +60,7 @@
         app:constraint_referenced_ids="avatar" />
 
     <TextView
-        android:id="@+id/middle_text"
+        android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -77,67 +77,67 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="middle_text" />
+        app:constraint_referenced_ids="content" />
 
     <ImageView
-        android:id="@+id/ic_liked"
+        android:id="@+id/like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/liked"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         app:srcCompat="@drawable/ic_liked_24" />
 
     <TextView
-        android:id="@+id/liked"
+        android:id="@+id/likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/ic_liked"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintStart_toEndOf="@+id/like"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         tools:text="@sample/posts.json/data/likes" />
 
     <ImageView
-        android:id="@+id/ic_send"
+        android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/send"
-        app:layout_constraintStart_toEndOf="@+id/liked"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintStart_toEndOf="@+id/likes"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         app:srcCompat="@drawable/ic_send_24" />
 
     <TextView
-        android:id="@+id/send"
+        android:id="@+id/shares"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/ic_send"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintStart_toEndOf="@+id/share"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         tools:text="@sample/posts.json/data/send" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/views"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         tools:text="@sample/posts.json/data/viewed" />
 
     <ImageView
-        android:id="@+id/ic_viwed"
+        android:id="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:contentDescription="@string/viewed"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text"
+        app:layout_constraintEnd_toStartOf="@+id/views"
+        app:layout_constraintTop_toBottomOf="@+id/content"
         app:srcCompat="@drawable/ic_viwed_24" />
 
     <TextView
@@ -150,6 +150,6 @@
         android:textColor="@color/red"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/middle_text" />
+        app:layout_constraintTop_toBottomOf="@+id/content" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
