--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -142,16 +142,14 @@
         app:layout_constraintTop_toBottomOf="@+id/content"
         app:srcCompat="@drawable/ic_viwed_24" />
 
-    <TextView
+    <View
         android:id="@+id/line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:singleLine="true"
-        android:text="@string/line"
-        android:textColor="@color/red"
-        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content" />
+        app:layout_constraintTop_toBottomOf="@+id/like" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
