Corrected ImageView android:id="@+id/menu"

--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -45,7 +45,7 @@
         tools:text="@sample/posts.json/data/published" />
 
     <ImageView
-        android:id="@+id/more_vert"
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/more_vert_name"
