Added  style for share button

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,9 @@
         <item name="iconTint">@color/ic_like_color_selector_24dp</item>
         <item name="backgroundTint">@color/like_tint_selector</item>
     </style>
+
+    <style name="Widget.AppTheme.ShareButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="iconTint">@color/ic_share_color_selector_24dp</item>
+    </style>
+
 </resources>
