--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -105,16 +105,19 @@
         tools:textColor="@color/purple_700"
         style="@style/Widget.AppTheme.LikeButton" />
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:contentDescription="@string/send"
+        android:textColor="@color/deepGreen"
+        app:icon="@drawable/ic_share_selector"
         app:layout_constraintStart_toEndOf="@+id/like"
         app:layout_constraintTop_toBottomOf="@+id/content"
-        app:srcCompat="@drawable/ic_share_24" />
+        tools:text="@sample/posts.json/data/send"
+        tools:textColor="@color/purple_700"
+        style="@style/Widget.AppTheme.ShareButton" />
 
     <TextView
         android:id="@+id/views"
