--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="iconTint">@color/ic_share_color_selector_24dp</item>
     </style>
 
+    <style name="Widget.AppTheme.MenuButton" parent="Widget.MaterialComponents.TimePicker.ImageButton">
+        <item name="iconTint">@color/ic_menu_color_selector_24dp</item>
+    </style>
+
 </resources>
