--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="lightRoseGrey">#FFFAE0FF</color>
     <color name="lightVioletGrey">#FFC7A8CD</color>
     <color name="deepGreen">#FF009688</color>
+    <color name="lightWhiteGreen">#FFD3FAD4</color>
 </resources>
