--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:contentDescription="@string/add_post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_ok_24"
+        app:srcCompat="@drawable/ic_add_24"
         android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
