--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -76,7 +76,19 @@
         app:layout_constraintTop_toBottomOf="@+id/avatar"
         tools:text="@sample/posts.json/data/content" />
 
-
+    <ImageView
+        android:id="@+id/video"
+        android:layout_width="100dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/video"
+        app:layout_constraintBottom_toTopOf="@+id/barrier_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/video_pic" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier_2"
