--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -80,7 +80,7 @@
         android:id="@+id/video"
         android:layout_width="100dp"
         android:layout_height="65dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/video"
         app:layout_constraintBottom_toTopOf="@+id/barrier_2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,7 @@
         android:textColor="@color/ic_like_color_selector_24dp"
         app:icon="@drawable/ic_like_selector_24dp"
         app:layout_constraintStart_toStartOf="@id/barrier_2"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2"
         tools:text="@sample/posts.json/data/likes"
         tools:textColor="@color/purple_700"
         style="@style/Widget.AppTheme.LikeButton" />
@@ -130,7 +130,7 @@
         android:textColor="@color/deepGreen"
         app:icon="@drawable/ic_share_selector"
         app:layout_constraintStart_toEndOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2"
         tools:text="@sample/posts.json/data/send"
         tools:textColor="@color/purple_700"
         style="@style/Widget.AppTheme.ShareButton" />
@@ -141,7 +141,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2"
         tools:text="@sample/posts.json/data/viewed" />
 
     <ImageView
@@ -152,7 +152,7 @@
         android:layout_marginEnd="8dp"
         android:contentDescription="@string/viewed"
         app:layout_constraintEnd_toStartOf="@+id/views"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/barrier_2"
         app:srcCompat="@drawable/ic_viwed_24" />
 
     <View
