--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -81,14 +81,14 @@
         android:layout_width="100dp"
         android:layout_height="65dp"
         android:layout_marginTop="8dp"
-        android:contentDescription="@string/video"
+        android:contentDescription="@string/video_button"
         app:layout_constraintBottom_toTopOf="@+id/barrier_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/" />
+        app:srcCompat="@drawable/video_pic" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier_2"
