--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -25,6 +25,7 @@
 
                 <com.google.android.material.tabs.TabItem
                     android:id="@+id/tabNews"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/news"
@@ -33,6 +34,7 @@
 
                 <com.google.android.material.tabs.TabItem
                     android:id="@+id/tabInteresting"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/interesting"
