--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="lightVioletGrey">#FFC7A8CD</color>
     <color name="deepGreen">#FF009688</color>
     <color name="lightWhiteGreen">#FFD3FAD4</color>
+    <color name="divider_color">#ccc</color>
 </resources>
