--- a/app/src/main/res/drawable/ic_image_uploading_foreground.xml
+++ b/app/src/main/res/drawable/ic_image_uploading_foreground.xml
@@ -4,12 +4,12 @@
     android:viewportWidth="108"
     android:viewportHeight="108"
     android:tint="#6C8EDC">
-  <group android:scaleX="3.2886"
-      android:scaleY="3.2886"
-      android:translateX="14.5368"
-      android:translateY="14.5368">
+  <group android:scaleX="3.0015"
+      android:scaleY="3.0015"
+      android:translateX="17.982"
+      android:translateY="17.982">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8s8,3.59 8,8S16.41,20 12,20M12,22c5.52,0 10,-4.48 10,-10c0,-5.52 -4.48,-10 -10,-10C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22L12,22zM11,12l0,4h2l0,-4h3l-4,-4l-4,4H11z"/>
+        android:pathData="M9,16h6v-6h4l-7,-7 -7,7h4zM5,18h14v2L5,20z"/>
   </group>
 </vector>
